Changes from Version 0.14.7 to 0.14.8 [10-Jun-2011]

* crsiv now returns a crs model object that supports residuals,
  fitted, predict and other generic functions. Note that this approach
  is based on first computing the model via regularization and then
  feeding a transformed response to a crs model object. You can test
  how close the two approaches are to one another by comparing
  model$phihat with fitted(model) via

  all.equal(as.numeric(fitted(model)),as.numeric(model$phihat))

Changes from Version 0.14.6 to 0.14.7 [09-Jun-2011]

* Checking for non-auto basis corrected, modify crsiv to use auto
  basis.

* When degree==0 segments is not used, so set segments==1 in this case
  (could be NA).

Changes from Version 0.14.3 to 0.14.6 [08-Jun-2011]

* Initial release of the crs package on CRAN.

* Added internal support for NOMAD via snomadr (Zhenghua's simple
  NOMAD interface). Ideally in the future Sebastien Le Digabel will be
  releasing an R package for NOMAD and we will be able to dump our
  internal code and rely on his R package. In the meantime this allows
  us to proceed with an R package.

* Numerous internal changes incorporated, most noteworthy additional
  flexibility in search provided by degree.min, degree.max,
  segments.min, and segments.max. Replaces basis.maxdim.

* Default now search via NOMAD, kernel=TRUE.

* crsiv implemented.

* Engel95 data added.

* Demos added.

Changes from Version 0.14.2 to 0.14.3 [01-May-2011]

* Zhenghua migrated the necessary files from the gsl so that the crs
  package is now standalone with the exception of NOMAD.

Changes from Version 0.14.0 to 0.14.2 [30-Apr-2011]

* Zhenghua migrated the bare-bones code required for the mgcv functions
  uniquecombs and tensor.prod.model.matrix, and I migrated the
  associated manpages, modified NAMESPACE and now the package does not
  require loading of mgcv which was sub-optimal.

* dropped cv.norm and replaced with cv.func=c("cv.ls","cv.gcv","cv.aic").
