@@ -340,7 +340,7 @@ crs.formula <- function(formula,
                         data.return=FALSE,
                         prune=FALSE,
 												restarts=0,
-												opts=list("MAX_BB_EVAL"=500,"MIN_MESH_SIZE"="r1.0e-10","INITIAL_MESH_SIZE"="r1.0e-01","MIN_POLL_SIZE"="r1.0e-10"),
+												opts=list("MAX_BB_EVAL"=500,"MIN_MESH_SIZE"="r1.0e-10","INITIAL_MESH_SIZE"="r1.0e-00","MIN_POLL_SIZE"="r1.0e-10"),
 												nmulti=0, 
 												...) {
 
