@@ -22,7 +22,7 @@ frscvNOMAD <- function(xz,
 											 degree=degree,
 											 segments=segments, 
 											 include=include, 
-											 opts=list("MAX_BB_EVAL"=500,"MIN_MESH_SIZE"="r1.0e-10","INITIAL_MESH_SIZE"="r1.0e-01","MIN_POLL_SIZE"="r1.0e-10"),
+											 opts=list("MAX_BB_EVAL"=500,"MIN_MESH_SIZE"="r1.0e-10","INITIAL_MESH_SIZE"="r1.0e-00","MIN_POLL_SIZE"="r1.0e-10"),
 											 nmulti=0) {
 
 		complexity <- match.arg(complexity)
