@@ -24,7 +24,7 @@ krscvNOMAD <- function(xz,
 											 degree=degree,
 											 segments=segments, 
 											 lambda=lambda, 
-											 opts=list("MAX_BB_EVAL"=500,"MIN_MESH_SIZE"="r1.0e-10","INITIAL_MESH_SIZE"="r1.0e-01","MIN_POLL_SIZE"="r1.0e-10"),
+											 opts=list("MAX_BB_EVAL"=500,"MIN_MESH_SIZE"="r1.0e-10","INITIAL_MESH_SIZE"="r1.0e-00","MIN_POLL_SIZE"="r1.0e-10"),
 											 nmulti=0) {
 
 		complexity <- match.arg(complexity)
